# sql-injection-tester

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  urls-example.csv
examples/: payloads.txt  urls.csv
files/: payloads.txt
include/: http_requests.h  log.h  sql_injection_tester.h  utils.h
src/: http_requests.cpp  log.cpp  main.cpp  sql_injection_tester.cpp  utils.cpp
tests/: sql_injection_tester_tests.cpp
